# RoboticArm

./: CMakeLists.txt  README.md  cylinder.cpp  cylinder.hpp  main.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  simulation.cpp  simulation.hpp  vertex.cpp  vertex.hpp  vertex_core.glsl
headers/: camera.hpp  cylinder.hpp  model.hpp  shader.hpp  simulation.hpp  vertex.hpp
shaders/: fragment_core.glsl  vertex_core.glsl
src/: camera.cpp  cylinder.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  simulation.cpp  vertex.cpp
